# h316_emul

./: .gitignore  Jenkinsfile  Makefile.am  README  aclocal.m4  asr.cc  asr.cpp  asr.hh  asr.hpp  asr_intf.cc  asr_intf.cpp  asr_intf.hh  asr_intf.hpp  automake.html  config.h.in  configure.ac  cpu.cpp  cpu.hpp  cpu_rtl.cpp  cpu_rtl.hpp  dot.cpp  dot.hpp  dsk.cpp  dsk.hpp  dum.cpp  dum.hpp  emul.cc  emul.cpp  event.cc  event.hh  event_queue.cc  event_queue.cpp  event_queue.hh  event_queue.hpp  flash.cc  flash.hh  fp_intf.cpp  fpr.cpp  fpr.hpp  fram.cc  (+89 more)
.github/workflows/: c-cpp.yml  ci.yml
data/: dap.css  m4h_defines.m4  main.css
doc/: supnik.txt
gtk/: Makefile.am  fp.c  fp.h  makefile  makefile.old  menu.c  menu.h  play.c
scripts/: h16-as.in  h16-as.m4  h16-basic.in  h16-f4.in  h16-f4.m4  h16-ld.in  h16-mac.m4  h16-pl5.in  h16-script.in
tapes/: basic16_ptlb_h_41286879_621_a.ptp  coredump_25000_slst.ptp  dap-16_mod2_slst.ptp  fortran_slst.ptp  ldrapm-76-palap-77.slst  mac_slst.ptp  pl516_pt_27000_slst.ptp
tapes/VT/: AB16-CCT4_slst.ptp  AB16-CMT5_slst.ptp  O16-11T1_slst.ptp  X16-08T1_slst.ptp
tests/VT/: VT.sh  ab16_cct4.txt  ab16_cct4_expected.txt  ab16_cmt5.txt  ab16_cmt5_expected.txt  o16_11t1.txt  o16_11t1_expected.txt  x16_08t1.txt  x16_08t1_expected.txt
tests/ab16cct4/: ab16cct4.sh  ab16cct4.txt
tests/scripts/: jshutest.inc
utils/: Makefile.am  configure.ac  depp_channel.c  depp_channel.h  dummy_proc.cc  dummy_proc.cc~  dummy_proc.cpp  dummy_proc.hh  dummy_proc.hpp  get_filename.cpp  get_filename.hpp  h16-asctotty.c  h16-asctotty.cc  h16-asctotty.cpp  h16-asr_app.cc  h16-asr_app.cpp  h16-depp-asr_app.cc  h16-depp-asr_app.cpp  h16-disasm.cc  h16-disasm.cpp  h16-leader.c  h16-lib.cc  h16-lib.cpp  h16-pdap.cc  h16-pdap.cpp  h16-plt2ps.cc  h16-plt2ps.cpp  h16-pp-asr_app.cc  h16-pp-asr_app.cpp  h16-ppl.c  h16-tabify.cc  h16-tabify.cpp  h16-tabs.c  h16-tape.cc  h16-tape.cpp  h16-ttytoasc.c  h16-ttytoasc.cc  h16-ttytoasc.cpp  pp_channel.c  pp_channel.h  (+5 more)
utils/data/: m4h_defines.h
wxwidgets/: asr_comms_prefs.cc  asr_comms_prefs.hh  asr_ptp.cc  asr_ptp.hh  asr_ptr.cc  asr_widget.cc  asr_widget.hh  draw.cc  fp.hpp  gui.cpp  gui.hpp  gui_types.hpp  h16cmd.cpp  h16cmd.hpp  makefile  papertape.cc  papertape.hh  papertapereader.cc  papertapereader.hh  printedpaper.cc  serialport.cpp  serialport.h  simpleport.hh  simpleportprefs.hh  teletype.cc  teletype.hh  teletype_logo_128.xpm
wxwindows/: asr_ptp.cc  asr_ptp.hh  asr_ptr.cc  asr_ptr.hh  asr_widget.cc  asr_widget.hh  big_dummy.ptp  draw.cc  floor.c  fp.cc  fp.cpp  fp.hh  fp.hpp  gui.cc  gui.cpp  gui.hh  gui.hpp  h16cmd.cpp  h16cmd.hh  hello.cc  makefile  makefile.sav  message.cpp  message.hh  pal-ap_slst.ptp  papertape.cc  papertape.cc.sav  papertape.cc.triangle  papertape.hh  papertape.hh.sav  papertape.hh.triangle  papertapereader.cc  papertapereader.cc.sav  papertapereader.hh  printedpaper.cc  printedpaper.hh  serialport.cpp  serialport.h  teleprinter.cc  teleprinter.hh  (+1 more)
